# CustomStrings

./: CMakeLists.txt  README.md  main.cpp  task.txt
src/: CMakeLists.txt  String.cpp  String.h
test/: CMakeLists.txt  StringTests.cpp
